fix nav bar z-index issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
-/*             NAV                */
+/*-----------------------------------------------------------NAV BAR--*/
 
 .navbar {
     background-color: #fafafa;
     padding:0;
     margin-left: 2%;
     height: 41px;
+    z-index: 9999;
 }
 
 nav {
@@ -25,8 +26,19 @@ nav button{
     box-sizing:content-box;
 }
 
-/*            HERO               */
+header ul{
+    background-color:#fafafa;
+    text-align: center;
+    padding-right: 20px;
+    width: 180px;
+}
 
+#navbarSupportedContent{
+    justify-content: right;
+}
+
+/*------------------------------------------------------------HERO IMAGE SECTION--*/
+/* The background image and container for text box */
 .hero-container{
   padding: 0;
   margin: 0;
@@ -40,8 +52,10 @@ nav button{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  z-index: -2;
 }
 
+/* Box with text and button */
 .hero-box {
     background-color: rgb(0, 0, 0, 0.5);
     padding:0;
@@ -57,6 +71,7 @@ nav button{
     align-items: center;
 }
 
+/* Formatting for box text */
 #hero-text{
     font-family: "Roboto", sans-serif;
     font-weight:400;
@@ -65,6 +80,7 @@ nav button{
     color: #F0D297;
 }
 
+/* Order button centering */
 .btn-order-now{
     width:100%;
     padding: 0;
